GNOME Bugzilla – Bug 748196
Fix converting pointer to gtype
Last modified: 2015-04-27 11:16:40 UTC
On 64-bit system, The GType is an eight-byte type. so, if we converting a GType to pointer, GINT_TO_POINTER (aka (gpointer) (gulong) (i)) is no problem. but, if we want to converting pointer back to GType, GPOINTER_TO_INT (aka (gint) (glong) (i)) is not work. I think we should converting pointer to GType by "(GType) xxxx".
Created attachment 302010 [details] [review] Fix converting pointer to GType
We already have a patch for that in bug 741099, which breaks the API.
I guess that we should test whether your patch fixes the bug in bug 741099.
*** Bug 741099 has been marked as a duplicate of this bug. ***
*** Bug 741637 has been marked as a duplicate of this bug. ***