gom: Fix converting pointer to GType

A gpointer will be the same size as a GType (64-bit), but
GPOINTER_TO_INT() will clamp that to int (32-bit) causing crashes
when we try to access the invalid GType values.

This solves crashes when gom was compiled with "-fPIE -pie" CFLAGS

https://bugzilla.gnome.org/show_bug.cgi?id=748196